--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/themes/cTheme.min.css" />
     <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>To Do List</title>
+    <title>To Do List 6320</title>
 </head>
 
 <body>
@@ -21,9 +21,7 @@
 
     <div data-role="page" id="page">
         <div data-role="header" class="header">
-            <div class="current-date ui-mini"></div>
-            <div class="geolocation ui-mini">
-                <!-- springvale 19C -->
+            <h1>Welcome to my Simple TO DO APP</h1>
             </div>
         </div>
 
@@ -54,13 +52,14 @@
 
         <div data-role="footer" data-position="fixed" class="footer" data-tap-toggle="false">
             <a class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus footer__icon-add ">
-                <input type="Text" class="todolist" placeholder="What we have to do?">
+                <input type="Text" class="todolist" placeholder="Type Here...">
             </a>
             <div data-role="navbar">
                 <ul>
-                    <li><a href="#page" data-icon="check">Cordova To Do List</a></li>
+                    <li><a href="#page" data-icon="check">Add New To Do List</a></li>
                 </ul>
             </div>
+            <p>6320 Simple Cordova app @2019.</p>
             <!-- /navbar -->
         </div>
     </div>
@@ -72,5 +71,8 @@
 
 
 </body>
+
+    
+
 
 </html>
