--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div data-role="content">
-            <ul id="list" class="main__list--ul touch" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search list..." data-icon="false" data-split-icon="delete">
+            <ul id="list" class="main__list--ul touch" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search For your list Here." data-icon="false" data-split-icon="delete">
 
             </ul>
             <button id="button"> Delete all</button>
@@ -54,11 +54,12 @@
 
         <div data-role="footer" data-position="fixed" class="footer" data-tap-toggle="false">
             <a class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus footer__icon-add ">
-                <input type="Text" class="todolist" placeholder="What we have to do?">
+                <input type="Text" class="todolist" placeholder="You can Add New List Here!">
             </a>
             <div data-role="navbar">
                 <ul>
                     <li><a href="#page" data-icon="check">Cordova To Do List</a></li>
+                    <p>Made by Susil Pokhrel 6320</p>
                 </ul>
             </div>
             <!-- /navbar -->
@@ -72,8 +73,5 @@
 
 
 </body>
-<footer>
-    <p>6320 Simple Cordova app @2019.</p>
-</footer>
 
 </html>
